--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,6 +39,7 @@ MY_SOURCES             = \
 				quiet.c \
 				ranks.c	 \
 				shmalloc.c \
+				teams.c \
 				tl_query.c \
 				version.c \
 MY_SOURCES            += \
