More teams setup.  Very much a W.i.P.

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -21,6 +21,7 @@ LIBSHMEMC_SOURCES        += \
 				ucx/contexts.c \
 				ucx/eps.c \
 				ucx/init.c \
+				ucx/teams.c \
 				ucx/test.c ucx/waituntil.c
 
 if HAVE_PMI
