--- a/man/man1/osh_info.1.in
+++ b/man/man1/osh_info.1.in
@@ -9,14 +9,16 @@
 OpenSHMEM.  Default output can include information such as:
 compile-time options, build system, supported features.
 .SH OPTIONS
-.IP "-V | --version"
+.IP "-V   | --version"
 only show the version of this OpenSHMEM pacakage.
-.IP "-h | --help"
+.IP "-p S | --prefix=S"
+start each output line with this string.
+.IP "-h   | --help"
 show a usage message summarizing these options.
 .SH NOTES
 .LP
 This program is not part of the OpenSHMEM specification.  It is
-supplied as part of the Reference Library for convenience.
+supplied as part of the Reference Library as a convenient utility.
 .SH SEE ALSO
 osh_intro(1).
 .SH OPENSHMEM
