Add some low hanging fruit in configure summary output

--- a/configure.ac
+++ b/configure.ac
@@ -192,6 +192,12 @@ echo
 echo "Summary"
 echo "-------"
 echo
+echo "              Logging: $enable_logging"
+echo "            Debugging: $enable_debug"
+echo "           Extensions: $enable_experimental"
+echo "    Aligned Addresses: $enable_aligned_addresses"
+echo "       Multi-threaded: $enable_threads"
+
 echo "                  UCX: version $UCX_VERSION_STRING in $UCX_DIR"
 echo "                 PMIx: version $PMIX_VERSION_STRING in $PMIX_DIR"
 
