Add experimental per-PE fence/quiet (wip)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -115,6 +115,8 @@ noinst_LTLIBRARIES     = liballocator.la
 if ENABLE_EXPERIMENTAL
 
 MY_SOURCES            += \
+			extensions/fence.c \
+			extensions/quiet.c \
 			extensions/shmalloc.c \
 			extensions/wtime.c \
 			extensions/interop.c
