--- a/src/shmemc/oshrun.in
+++ b/src/shmemc/oshrun.in
@@ -58,17 +58,13 @@ my $launcher = '';
 #
 # Anything in environment?
 #
-if (defined $ENV{SHMEM_LAUNCHER}) {
-  $launcher = $ENV{SHMEM_LAUNCHER};
-}
+$launcher = $ENV{SHMEM_LAUNCHER} if defined $ENV{SHMEM_LAUNCHER};
 
 #
 # Configure might have given us a SHMEM_LAUNCHER (otherwise, in the
 # installed file, this is a strange-looking no-op)
 #
-if ($launcher eq '') {
-  $launcher = '@SHMEM_LAUNCHER@';
-}
+$launcher = '@SHMEM_LAUNCHER@' if $launcher eq '';
 
 #
 # still nothing, can we find something?
@@ -85,7 +81,7 @@ sub which {
 
   for my $p (@ps) {
     my $try = "$p/$f";
-    return $try if ( -x $try );
+    return $try if -x $try;
   }
   return undef;
 }
@@ -97,7 +93,7 @@ sub which {
 
 debug('init', "finding viable launcher");
 
-my $prrte_starter;
+my $prrte_dvm;
 
 my $prun = qq(prun);
 
@@ -109,9 +105,9 @@ if ($launcher eq '') {
   if (defined $pl) {
     debug('prrte', "using \"$pl\"");
 
-    my @Starters = qw(prte psrvr);
+    my @DVMs = qw(prte psrvr);
 
-    for my $strt (@Starters) {
+    for my $strt (@DVMs) {
       debug('prrte', "check matching \"$strt\"");
 
       my $ps = $pl;
@@ -119,7 +115,7 @@ if ($launcher eq '') {
 
       if ( -x $ps ) {
         debug('prrte', "using \"$ps\"");
-        $prrte_starter = $ps;
+        $prrte_dvm = $ps;
         $launcher = "$prun";
         last;
       }
@@ -186,20 +182,20 @@ sub zap {                       # clean up after signal
 };
 
 sub run_app {
-  my @extra_args;
+  my @args;
 
-  # make sure required SHMEM_ env vars get passed
-  push @extra_args, qw(-x SHMEM_* -x SMA_*) if $is_prrte;
+  # make sure required env vars get passed
+  push @args, qw(-x SHMEM_* -x SMA_*) if $is_prrte;
 
   # see if user wants to tell us anything from environment
   my $pre = $ENV{PRUN_ARGS};
   if (defined $pre) {
-    push @extra_args, split('\s+', $pre);
+    push @args, split('\s+', $pre);
   }
 
-  my @all_args = (@extra_args, @ARGV);
+  @args = (@args, @ARGV);
 
-  debug('launch', "\"$launcher @all_args\"");
+  debug('launch', "\"$launcher @args\"");
 
 
   my $pid = fork();
@@ -211,7 +207,7 @@ sub run_app {
 
   my $rc = 0;
   if ($pid == 0) {              # child
-    exec $launcher, @all_args;
+    exec $launcher, @args;
   }
   else {                        # parent
     debug('launch', "application in process $pid");
@@ -244,60 +240,58 @@ my $prte_pid;
 my ($chin, $chout, $cherr);     # child stdio
 
 #
-# For controlling launched starter
+# For controlling launched dvm
 #
 
 sub prrte_shutdown {
   #
-  # shut down starter
+  # shut down dvm
   #
   kill TERM => $prte_pid;
 
   my $killed = waitpid($prte_pid, 0);
 
   if ($killed == $prte_pid) {
-    debug('prrte', "process $prte_pid shut down");
+    debug('prrte', "DVM $prte_pid shut down");
   }
   else {
-    die "$progname:$prte_pid: couldn't kill PRRTE starter: $!";
+    die "$progname:$prte_pid: couldn't kill PRRTE DVM: $!";
   }
 }
 
 sub prrte_launch {
   #
-  # starter is in child process
+  # dvm is in child process
   #
-  debug('prrte', "starting up");
+  debug('prrte', "starting DVM");
 
   $cherr = gensym();            # need lvalue
 
-  $prte_pid = open3($chin, $chout, $cherr, $prrte_starter);
+  $prte_pid = open3($chin, $chout, $cherr, $prrte_dvm);
 
   if (! defined $prte_pid) {
-    die "$progname: failed to run starter: $!";
+    die "$progname: failed to run dvm: $!";
   }
 
   #
-  # parent waits for starter to be ready, then launches user app
+  # parent waits for dvm to be ready, then launches user app
   #
   if ($prte_pid) {
     my $expected_response = 'DVM ready';
-    my $got;
-    my $ready = 0;
+    my $got = undef;
 
     # TODO: timeout?
     while (<$chout>) {
       if (/^$expected_response/) {
         chomp;
         $got = $_;
-        $ready = 1;
         last;
       }
     }
 
     # off we go!
-    if ($ready) {
-      debug('prrte', "pid $prte_pid says \"$got\"");
+    if (defined $got) {
+      debug('prrte', "DVM in pid $prte_pid says \"$got\"");
       return 0;
     }
 
