--- a/man/man1/oshrun.1.in
+++ b/man/man1/oshrun.1.in
@@ -92,7 +92,7 @@ or on all PEs if the variable's (case-insensitive) value is "y[es]" or
 .RS 2
 .IP "SHMEM_PROGRESS_DELAY (default: 1000)"
 If progress threads requested, control the delay between polls.  Given
-in nanosceonds.
+in nanoseconds.
 .RE
 .RS 2
 .IP "SHMEM_MEMERR_FATAL (bool, default: true)"
