Start support for python2 + 3.  Changes are really small, might conslidate via sed.

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -114,11 +114,15 @@ endif # c++
 
 # TODO detect perl/python and choose source version
 
-if HAVE_PY2_LAUNCHER
-OSHRUN_TEMPLATE = oshrun.py2.in
+if HAVE_PY3_LAUNCHER
+  OSHRUN_TEMPLATE = oshrun.py3.in
 else
-OSHRUN_TEMPLATE = oshrun.perl.in
-endif # HAVE_PY2_LAUNCHER
+  if HAVE_PY2_LAUNCHER
+    OSHRUN_TEMPLATE = oshrun.py2.in
+  else
+    OSHRUN_TEMPLATE = oshrun.perl.in
+  endif # HAVE_PY2_LAUNCHER
+endif # HAVE_PY3_LAUNCHER
 
 oshrun:	$(OSHRUN_TEMPLATE)
 	sed -e 's,\@SHMEM_LAUNCHER\@,@SHMEM_LAUNCHER@,g' < $^ > $@
