Rework the team structure with forward and reverse maps to translate between teams

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -3,6 +3,7 @@
 OTHER_CPPFLAGS            = -I$(srcdir)/../shmemu \
 				-I$(srcdir)/../shmemt \
 				-I../../include \
+				-I$(srcdir)/../klib \
 				-I$(top_srcdir)/include \
 				-I$(srcdir)/..
 LIBSHMEMC_SOURCES         = \
