--- a/src/shmemc/osh_common.in
+++ b/src/shmemc/osh_common.in
@@ -50,5 +50,8 @@ do
             ;;
     esac
 done
-    
-$compiler -I$shmem_include @PTHREAD_CFLAGS@ "$@" $libs_stanza @PTHREAD_LIBS@
+
+pthread_cflags="${PTHREAD_CFLAGS-@PTHREAD_CFLAGS@}"
+pthread_libs="${PTHREAD_LIBS-@PTHREAD_LIBS@}"
+
+$compiler -I$shmem_include $pthread_cflags "$@" $libs_stanza $pthread_libs
