More non-blocking calls

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -19,6 +19,7 @@ LIBSHMEMC_SOURCES         = \
 # -- begin: UCX sources --
 #
 LIBSHMEMC_SOURCES        += \
+				ucx/callbacks.c \
 				ucx/comms.c \
 				ucx/contexts.c \
 				ucx/eps.c \
