--- a/src/shmemc/oshrun.py.in
+++ b/src/shmemc/oshrun.py.in
@@ -97,12 +97,12 @@ if launcher == "":
     debug("init", "checking for PRTE...")
     if find_executable(PRTE_LAUNCHER) != None:
         launcher = PRTE_LAUNCHER + " " + PRTE_ARGS
-        debug("init", "using PRTE")
+        debug("init", "using PRTE ({0})".format(PRTE_LAUNCHER))
     else:
         debug("init", "checking for MPI...")
         if find_executable(MPI_LAUNCHER):
             launcher = MPI_LAUNCHER
-            debug("init", "using MPI")
+            debug("init", "using MPI ({0})".format(MPI_LAUNCHER))
         else:
             bail("can't find a launcher")
 
