Add code for Jim's version extensions (low hanging fruit)

--- a/include/shmem/defs_subst.h.in
+++ b/include/shmem/defs_subst.h.in
@@ -8,4 +8,17 @@
 #define SHMEM_MAX_NAME_LEN  @SHMEM_MAX_NAME_LEN@
 #define SHMEM_VENDOR_STRING "@SHMEM_VENDOR_STRING@"
 
+#ifdef PR463
+
+/*
+ * https://github.com/openshmem-org/specification/issues/463
+ *
+ */
+
+#define SHMEM_VENDOR_MAJOR_VERSION @SHMEM_VENDOR_MAJOR_VERSION@
+#define SHMEM_VENDOR_MINOR_VERSION @SHMEM_VENDOR_MINOR_VERSION@
+#define SHMEM_VENDOR_PATCH_VERSION @SHMEM_VENDOR_PATCH_VERSION@
+
+#endif
+
 #endif  /* ! _SHMEM_DEFS_SUBST_H */
