Fix accidental rename of pthread.m4 flags

--- a/src/shmemc/osh_common.in
+++ b/src/shmemc/osh_common.in
@@ -51,7 +51,7 @@ do
     esac
 done
 
-pthreads_cflags="${OSH_PTHREADS_CFLAGS-@OSH_PTHREADS_CFLAGS@}"
-pthreads_libs="${OSH_PTHREADS_LIBS-@OSH_PTHREADS_LIBS@}"
+pthreads_cflags="${OSH_PTHREADS_CFLAGS-@PTHREAD_CFLAGS@}"
+pthreads_libs="${OSH_PTHREADS_LIBS-@PTHREAD_LIBS@}"
 
 $compiler -I$shmem_include $pthreads_cflags "$@" $libs_stanza $pthreads_libs
